--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,8 @@ constraintlayout = "2.1.4"
 recyclerview = "1.3.2"
 retrofit= "2.11.0"
 gson= "2.11.0"
+workRuntime = "1.0.1"
+workRuntimeKtx = "2.9.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -28,6 +30,8 @@ androidx-constraintlayout = { group = "androidx.constraintlayout", name = "const
 androidx-recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview" }
 retrofit = {group = "com.squareup.retrofit2", name ="retrofit", version.ref="retrofit" }
 gson = {group="com.google.code.gson", name="gson", version.ref = "gson"}
+work-runtime = { module = "android.arch.work:work-runtime", version.ref = "workRuntime" }
+androidx-work-runtime-ktx = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "workRuntimeKtx" }
 
 
 [plugins]
